--- a/data-api/appsettings.json
+++ b/data-api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "ConnectionString": "mongodb+srv://caitlinthaeler:th5GvL4.>mkp10@portfolio-data.l1dtssl.mongodb.net/",
+    "DatabaseName": "portfolio_content",
+    "Collections": {
+      "Projects": "projects",
+      "Skills": "skills",
+      "Media": "media",
+      "Messages": "messages"
+    }
+  }
 }
