--- a/data-api/appsettings.json
+++ b/data-api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AllowedCorsOrigins": [
+    "http://localhost:5062",
+    {"_comment": "for development AND production environments" }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,12 +12,24 @@
   "AllowedHosts": "*",
   "MongoDB": {
     "ConnectionString": "mongodb+srv://caitlinthaeler:th5GvL4.>mkp10@portfolio-data.l1dtssl.mongodb.net/",
-    "DatabaseName": "portfolio_content",
-    "Collections": {
-      "Projects": "projects",
-      "Skills": "skills",
-      "Media": "media",
-      "Messages": "messages"
-    }
+    "DatabaseName": "portfolio_db",
+    "Collections": [
+      {
+        "collectionName": "projects",
+        "modelType": "Project"
+      },
+      {
+        "collectionName": "skills",
+        "modelType": "Skill"
+      },
+      {
+        "collectionName": "media",
+        "modelType": "Media"
+      },
+      {
+        "collectionName": "messages",
+        "modelType": "ContactMessage"
+      }
+    ]
   }
 }
