--- a/data-api/appsettings.json
+++ b/data-api/appsettings.json
@@ -32,5 +32,10 @@
         "modelType": "ContactMessage"
       }
     ]
+  },
+  "GitHub": {
+    "PersonalAccessToken": "PORTFOLIO-CONTENT-ACCESS-TOKEN",
+    "BaseUrl": "https://github.com/caitlinthaeler/portfolio_content.git",
+    "Username": "caitlinthaeler"
   }
 }
