--- a/data-api/appsettings.json
+++ b/data-api/appsettings.json
@@ -35,7 +35,7 @@
   },
   "GitHub": {
     "PersonalAccessToken": "PORTFOLIO-CONTENT-ACCESS-TOKEN",
-    "BaseUrl": "https://github.com/caitlinthaeler/portfolio_content.git",
+    "BaseUrl": "https://api.github.com/",
     "Username": "caitlinthaeler"
   }
 }
