added xunit, deleted octokit

--- a/data-api/appsettings.json
+++ b/data-api/appsettings.json
@@ -34,8 +34,6 @@
     ]
   },
   "GitHub": {
-    "PersonalAccessToken": "PORTFOLIO-CONTENT-ACCESS-TOKEN",
-    "BaseUrl": "https://api.github.com/",
-    "Username": "caitlinthaeler"
+    "AccessToken": "PORTFOLIO-CONTENT-ACCESS-TOKEN"
   }
 }
